[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "anubis-solver"
version = "0.1.0"
description = "Solver for anti-bot challenges (Anubis / canine.tools style)"
authors = [{ name="Your Name", email="you@example.com" }]
readme = "README.md"
license = { text = "MIT" }
dependencies = ["requests"]
requires-python = ">=3.8"

[project.urls]
Homepage = "https://github.com/yourname/anubis-solver"
